Ports/jdk/jdk-jdk-18-10/make/langtools/test/crules/MutableFieldsAnalyzer/Test.out
Test.java:8:26: compiler.err.proc.messager: compiler.misc.crules.err.var.must.be.final: public static String mutable
1 error
